--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,15 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+    <ion-title>PIOR APP DA SALA, BOSTA</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+<ion-content>
+  {{ nome }}
+<ion-img src= "https://i.imgur.com/G6WLFON.jpg"></ion-img>
+<ion-button (click) = "clicar()"> ok </ion-button>
 </ion-content>
+
+<ion-footer>
+
+</ion-footer>
